--- a/experimental/h/hong_kong/source/readme.htm
+++ b/experimental/h/hong_kong/source/readme.htm
@@ -22,8 +22,7 @@
   Oạt Yữ Quóc Yữ Chị 粵語國語字 the Script of National Language for Cantonese
 </p>
 <p> e-mail: goetiansoc@proton.me</p>
-
-<p> telegram: https://t.me/cathaylab</p>
+<a href="https://t.me/+ax2H-iql9rplYzBk">Cantonese National Language Script Telegram Group粵語國語字谷Oạt Ngữ Quóc Ngữ Tị Cuc</a>
 <p> instagram for publisher: cathay_lab2024 </p>
 <p> instagram for Cantonese Romanization program: cantonese_chuquocngu</p>
 <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocyuchiquongchauyam.dic.yaml">Dictionary for Cantonese Quóc Yữ Chị粵語國語字字典香港同廣州音</a>
