--- a/experimental/h/hong_kong/source/welcome.htm
+++ b/experimental/h/hong_kong/source/welcome.htm
@@ -21,11 +21,11 @@
 
 
   <p>Hong Kong keyboard for the Script of National Language for Cantonese of Hong Kong and Canton city accent</p> 
-  <p>Oạt Yữ Quóc Yữ Chị Hương Kỏng Thùng Quỏng Châu Yâm粵語國語字香港同廣州音</p> 
+  <p>Oạt Yữ Quóc Yữ Chị Hương Cỏng Thùng Quỏng Châu Yâm粵語國語字香港同廣州音</p> 
   <p>Bộ gõ Chữ Quốc Ngữ tiếng Quảng Đông giọng Quảng Châu và Hương Cảng</p>
 
    <p>粵語國語字係一種拉丁化嘅粵語文字，意在發展粵語表音文字，縮短粵文學習同書寫時間，增強粵語使用者之間嘅凝聚力同自我認同 </p>
-   <p> Oạt Yữ Quóc Ngữ Chị hạy yât chủng Lai-đinh phá ké Oạt Yữ mần-chị, ý chọi phát-chiển Oạt Yữ biểu-yâm mần-chị, suc-đoản Oạt Mần học-chập thùng sư-sẻ sị-can, chăng-khường Oạt Yữ sỉ-yụng-chẻ chi-kan ké yình-chụi-lịch thùng chị-ngõ yịnh-thùng</p>
+   <p> Oạt-Yữ Quóc-Ngữ-Chị hệ yât chủng Lai-đinh-phá ké Oạt-Yữ mần-chị, ý-chọi phát-chiển Oạt-Yữ biểu-yâm mần-chị, suc-đoản Oạt-Mần học-chập thùng sư-sẻ sị-kan, chăng-khường Oạt-Yữ sỉ-yụng-chẻ chi-kan ké yình-chụi-lịch thùng chị-ngõ yịnh-thùng</p>
    <p> Chữ Quốc Ngữ tiếng Quảng Đông là một loại chữ viết La-tinh hóa của tiếng Quảng Đông, nhằm mục đích phát triển chữ viết biểu âm của tiếng Quảng Đông, giảm bớt thời gian học và viết tiếng Quảng Đông, nâng cao sức hướng tâm và ý thức về cá tính mình của những người sử dụng tiếng Quảng Đông</p>
   <p> The script of national language for Cantonese is a romanized Cantonese script aimed at developing a phonetic writing system for Cantonese, reduce the time of learning and writing of Cantonese, while strengthening the cohesion and self-identity among Cantonese speakers.</p>
    <p>
@@ -42,6 +42,24 @@
   <img src='vowels.png' alt='Keyboard Layout'>
   <p>"iu" "im" "in" "ip" "it"組合用於取代"iêu" "iêm" "iên" "iêp" "iêt"當用嚟表示發音或者串唔係粵語詞源或者唔係漢越詞詞源嘅詞語，譬如話來自嘅英文嘅借詞「𨋢lip」「天拿水thin-nà sủi」，或者係借用漢字嚟表示詞語嘅發音但係字嘅意思同漢字本身嘅意思無關嘅字，譬如話「點解đỉm-cải」</p>
   <p>The "iu" "im" "in" "ip" "it" combiniation can be used to replace "iêu" "iêm" "iên" "iêp" "iêt" when representing sounds and spelling words without Cantonese origin and without sino-cantonese origin, for example loanword from English, such as "lip" and "thin-nà sủi", or in case of using chinese characters to represent sounds or a word but the meaning of the character is not linked with its origin meaning, such as "點解đỉm-cải"</p>
+   <p>ê同ay用嚟表示一於嘅發音，ê用嚟拼寫漢字詞源嘅字同有明確嘅詞源喺古音入面讀呢個韻腹嘅詞語，ay用嚟拼寫少部分嘅非漢字嘅詞語或者係漢字但係係由不規則音變產生呢個讀音嘅字，譬如話「嚟lày」「睇thảy」「咪may」「咪mạy」「米may」「呢nay」「揮phay」「僞ngạy」「魏ngày」「危ngày」「矮ảy」「哎áy」「曳yay」「喺hảy」「使sảy」「费pháy」「沸pháy」</p>
+ <p>"ê" and "ay" are used to represent same pronunciation. "ê" is used to spell sino-cantonese words and the words with clear etymology that pronounce this vowel in ancient time. "ay" is used to spell few non-sino-cantonese words and sino-cantonese words with irregular sound change, such as「嚟lày」「睇thảy」「咪may」「咪mạy」「米may」「呢nay」「揮phay」「僞ngạy」「魏ngày」「危ngày」「矮ảy」「哎áy」「曳yay」「喺hảy」「使sảy」「费pháy」「沸pháy」</p>
+ <p>如果一個單獨嘅yi音嘅音節聲調係第1、2、3聲調，咁唔使寫後邊嘅i，譬如話「衣y」「倚ỷ」「意ỷ」</p>
+ <p>If a "yi" sound syllable has first, second, or third tone, the "i" behind can be removed, such as 「衣y」「倚ỷ」「意ỷ」</p>
+ <p>如果一個單獨嘅yi音嘅音節聲調係第4、5、6聲調，咁要寫yi，譬如話「移yì」「以yĩ」「易yị」</p>
+ <p>If a "yi" sound syllable has forth, fifth, or sixth tone, it should be spelled as "yi", such as 「移yì」「以yĩ」「易yị」</p>
+   <p>如果一個單獨嘅yư音嘅音節聲調係第1、2、3聲調，咁唔使寫前邊嘅y，譬如話「於ư」「傴ử」「淤ứ」</p>
+ <p>If a "yư" sound syllable has first, second, or third tone, the "i" behind can be removed, such as 「於ư」「傴ử」「淤ứ」</p>
+ <p>如果一個單獨嘅yư音嘅音節聲調係第4、5、6聲調，咁要寫yư，譬如話「輿yừ」「與yữ」「預yự」</p>
+ <p>If a "yư" sound syllable has forth, fifth, or sixth tone, it should be spelled as "yi", such as 「輿yừ」「與yữ」「預yự」</p>
+ <p>如果一個單獨嘅uy音嘅音節聲調係第4、5、6聲調，咁可以寫成vy，譬如話「為vỳ」「偉vỹ」「位vỵ」</p>
+ <p>If a "vy" sound syllable has forth, fifth, or sixth tone, it can be spelled as "vy", such as 「為vỳ」「偉vỹ」「位vỵ」</p>
+ <p>如果一個單獨嘅yiêt, yiên, yiêm音嘅音節聲調係第1、2、3聲調，咁唔使寫中間嘅i，譬如話「噎yết」「煙yên」「腌yêm」</p>
+ <p>If a "yiêt" "yiên" "yiêm" sound syllable has first, second, or third tone, the "i" in the middle can be removed, such as 「噎yết」「煙yên」「腌yêm」</p>
+ <p>如果"y" "ê" 嘅元音前邊冇韻首單獨出現，咁要寫"ơi" "ay"，譬如話「誒ợi」「哎áy」</p>
+ <p>If "y" and "ê" vowels appear without a consonant before, it should be spelled as "ơi" "ay", such as 「誒ợi」「哎áy」</p>
+ <p>如果"â"嘅元音後邊冇韻尾單獨出現，咁要寫"ơ"，譬如話「㗎cớ」「嘞lớ」</p>
+ <p>If "â" vowels appear without a consonant behind, the vowel should be spelled as "ơ", such as 「㗎cớ」「嘞lớ」</p>
   <h1>音調 Thanh Điệu tones</h1>
   <img src='tones.png' alt='Keyboard Layout'>
 
@@ -117,8 +135,8 @@
     <tr>
       <td>2 (high rising)</td>
       <td>r</td>
-      <td>hao<strong>r</strong></td>
-      <td>hảo好
+      <td>cho<strong>r</strong></td>
+      <td>chỏ左
        </td>
     </tr>
     <tr>
@@ -144,8 +162,8 @@
     <tr>
       <td>6 (low falling)</td>
       <td>j</td>
-      <td>hai<strong>j</strong></td>
-      <td>hạy係
+      <td>hee<strong>j</strong></td>
+      <td>hệ係
       </td>
     </tr>
     <tr>
@@ -204,14 +222,16 @@
 
     <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quocyuchiquongchauyam.dic.yaml">Dictionary for Cantonese Quóc Yữ Chị粵語國語字字典香港同廣州音</a>
     <p></p>
-    <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/oatnguquocnguti.yaml">Dictionary for the script of National Language universal version Quóc Ngữ Tị粵語國語字字典總合通用版</a>
+    <a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/oatnguquocnguti.yaml">Dictionary for the script of National Language universal version Quóc Ngữ Tị大粵國音字匯－粵語國語字字典總合通用版</a>
+<p></p>
+    <a href="https://t.me/+ax2H-iql9rplYzBk">Cantonese National Language Script Telegram Group粵語國語字谷Oạt Ngữ Quóc Ngữ Tị Cuc</a>
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
 
 <p>範文：南國山河</p>
 <p>Nàm Quóc San Hò</p>
 <p>南國山河南帝居</p>
-<p>Nàm Quóc San Hò Nàm Đáy Cui</p>
+<p>Nàm Quóc San Hò Nàm Đế Cui</p>
 <p>截然定分在天書</p>
 <p>Chiệt Yiền Định Phân chọi Thiên Sư</p>
 <p>如何逆虜來侵犯</p>
