Changes from PR #3585

--- a/release/c/cymraeg_fodern/source/readme.htm
+++ b/release/c/cymraeg_fodern/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Cymraeg Fodern</h1>
 
 <p>
-  
+This keyboard is for use of the Welsh language (Cymraeg) using a QWERTY (ANSI or ISO) layout.
 </p>
 
 <p>Copyright © Joseff Bailey-Wood</p>
