--- a/release/c/cymraeg_fodern/source/welcome.htm
+++ b/release/c/cymraeg_fodern/source/welcome.htm
@@ -15,7 +15,7 @@
 <h1>Start Using Cymraeg Fodern</h1>
 
 <p>
-  
+This keyboard is for use of the Welsh language (Cymraeg) using a QWERTY (ANSI or ISO) layout.
 </p>
 
 <h1>Keyboard Layout</h1>
