Fixing issues according to received feedback at upstream

--- a/release/d/devanagari_kagapa_phonetic/source/readme.htm
+++ b/release/d/devanagari_kagapa_phonetic/source/readme.htm
@@ -18,7 +18,7 @@
   This layout is the KaGaPa phonetic layout for the Devanagari script, as distributed in Linux. This is a very intuitively designed layout, strictly following recommendations and key combinations as stated by Unicode, hence a well-compliant one.
 </p>
 
-<p>Copyright © 2025 Abhishek Deshpande</p>
+<p>Copyright © Abhishek Deshpande</p>
 
 </body>
 </html>
