Fixing issues and adding font support according to received feedback at upstream

--- a/release/m/modi_kagapa_phonetic/source/readme.htm
+++ b/release/m/modi_kagapa_phonetic/source/readme.htm
@@ -18,7 +18,7 @@
   This layout is the KaGaPa phonetic layout for a historically important script, called 'Modi'. It was prominently used to write Marathi, and in a few instances, for Hindi and Sanskrit. It is phonetically equivalent to Devanagari KaGaPa Phonetic, i.e., using similar character mapping, but for Modi letters.
 </p>
 
-<p>Copyright © 2025 Abhishek Deshpande</p>
+<p>Copyright © Abhishek Deshpande</p>
 
 </body>
 </html>
