--- a/release/m/modi_kagapa_phonetic/source/welcome.htm
+++ b/release/m/modi_kagapa_phonetic/source/welcome.htm
@@ -474,7 +474,7 @@
 <blockquote>
   Author: <strong>Abhishek Deshpande</strong><br>
   License: <a href="https://opensource.org/license/mit">MIT</a><br>
-  Copyright: © 2025 Abhishek Deshpande</p>
+  Copyright: © Abhishek Deshpande</p>
 </blockquote>
 
 </body>
