Changes ii from PR keymanapp#3585
- help folder moved to source folder
- changes to touch layout layers
- keyboard layout adjusted for international usage (keys affected : BKQUOTE, oE2, SLASH, COMMA, PERIOD)

--- a/release/c/cymraeg_fodern/source/welcome.htm
+++ b/release/c/cymraeg_fodern/source/welcome.htm
@@ -20,7 +20,7 @@ This keyboard is for use of the Welsh language (Cymraeg) using a QWERTY (ANSI or
 
 <h1>Keyboard Layout</h1>
 
-<!-- Insert Keyboard Layout Images or HTML here -->
+<img src="layout.png" width="500" alt="Cymraeg Fodern keyboard layout.">
 
 </body>
 </html>
