--- a/release/e/english_shavian_jafl/source/welcome/welcome.htm
+++ b/release/e/english_shavian_jafl/source/welcome/welcome.htm
@@ -42,9 +42,9 @@
   </ul>
   <p>The compound letters 𐑿, 𐑸 and 𐑹 are also assigned to single keys on the SHIFT layer. These are relatively common single letter words in English and having a single key for them saves a combination involving SHIFT layer letters, if desired.</p>
   <p>Double guillemets (« ») may also be typed by entering two single guillemets (‹ + ‹ or › + ›).</p>
-  <p>To prevent a compound letter being formed (e.g. to type 𐑩𐑮 or 𐑦𐑩) type 𐑩 then SHIFT + ⁞𐑮, 𐑦 then SHIFT + ⁞𐑩, etc. For example, if you wish to typ 𐑣<strong>𐑳𐑮</strong>𐑦 and not 𐑣<strong>𐑻</strong>𐑦, you will need to type 𐑳 followed by SHIFT + ⁞𐑮.</p>
-  <p>A special key, marked by a star ☆ on the SHIFT layer, also breaks compound letters into their component letters once formed. For example the 𐑘𐑵 combination does not occur natively in Shavian but may be accessed by typing letters 𐑿 and then ☆.</p>
-  <p>The ☆ key also inserts a ‘variation selector’ used to access the Shavian extended letters for the Inter Alia font (it will only work for this font and any others specifically designef for this), see the <a href="https://github.com/Shavian-info/interalia">Inter Alia Github repository</a> for more explanation.</p>
+  <p>To prevent a compound letter being formed (e.g. to type 𐑩𐑮 or 𐑦𐑩) type 𐑩 then SHIFT + ⁞𐑮, 𐑦 then SHIFT + ⁞𐑩, etc. For example, if you wish to type 𐑣<strong>𐑳𐑮</strong>𐑦 and not 𐑣<strong>𐑻</strong>𐑦, you will need to type 𐑳 followed by SHIFT + ⁞𐑮.</p>
+  <p>A special key, marked by a star ☆ on the SHIFT layer, also breaks compound letters into their component letters once formed. For example the 𐑘𐑵 combination does not occur natively in Shavian but may be accessed by typing letter 𐑿 and then ☆.</p>
+  <p>The ☆ key also inserts a ‘variation selector’ used to access the Shavian extended letters for the Inter Alia font (it will only work for this font and any others specifically designed for this), see the <a href="https://github.com/Shavian-info/interalia">Inter Alia Github repository</a> for more explanation.</p>
   <h2>Phone layout</h2>
   <p>The phone layout is adjusted for ease of typing on a small screen.</p><img src="shaw_jafl_phone_default.png" alt="The default layer of the Shaw JAFL smart phone keyboard layout.">
   <p>Letters in the SHIFT layer may be accessed by pressing SHIFT, or by a long hold on the key, or by flicking down on the key (whichever you prefer). CAPS LOCK may be accessed by double tapping SHIFT.</p><img src="shaw_jafl_phone_shift.png" alt="The SHIFT layer of the Shaw JAFL smart phone keyboard layout.">
