[jorai] Update jorai so RALT keys will work on any platform

--- a/release/j/jorai/source/readme.htm
+++ b/release/j/jorai/source/readme.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Jorai keyboard for Keyman Desktop</title>
+<title>Jorai Keyboard</title>
 <style type='text/css'>
     h1 { font: bold 16pt Tahoma; color: #4444cc }
     h2 { font: bold 12pt Tahoma; color: #4444cc }
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-<h1>Jorai keyboard for Keyman Desktop</h1>
+<h1>Jorai Keyboard</h1>
 <A name=intro></A>
       <H2>Introduction</H2>
       <P>The Jorai keyboard was designed for the Jorai (or Jarai) language of Viet Nam.</P><A name=kmn></A>
