--- a/release/j/jorai/source/welcome/welcome.htm
+++ b/release/j/jorai/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Jorai keyboard for Keyman Desktop</title>
+<title>Start Using Jorai</title>
 <style type='text/css'>
     h1 { font: bold 16pt Tahoma; color: #4444cc }
     h2 { font: bold 12pt Tahoma; color: #4444cc }
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-<h1>Jorai keyboard for Keyman Desktop</h1>
+<h1>Start Using Jorai</h1>
 
 <p>This keyboard is designed for use with the Jorai language of Viet Nam. It includes an
 on screen keyboard which can be viewed by clicking on the Keyman icon and 
@@ -29,10 +29,5 @@ selecting the On Screen Keyboard menu item. </p>
 <h3>RAlt+Shift</h3>
 	  <img width="100%" src="RAltShift.jpg">
 
-<h2>Links</h2>
-<ul>
-<li>Home Page: <a href='https://keyman.com/'>https://keyman.com/</a></li>
-<li><a href='http://keymankeyboards.com/iso:jra'>Other keyboards for these languages</a></li>
-</ul>
 </body>
 </html>
