[kayan and tem] Update keyboards so RALT works on web

--- a/release/t/tem_kdh/source/welcome/welcome.htm
+++ b/release/t/tem_kdh/source/welcome/welcome.htm
@@ -1,11 +1,18 @@
-﻿<!DOCTYPE HTML>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset='utf-8'>
-<title>Clavier Tem / Tem Keyboard</title>
+  <meta charset="utf-8">
+  <title>Start Using Tatar Basic</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
-<head/>
 <body>
+
+<h1>Start Using Clavier Tem / Tem Keyboard</h1>
+
 <table>
 <tr>
 <td>
@@ -82,7 +89,7 @@ Fonts: This keyboard will work with any Unicode font, but the placement of accen
 <tr>
 <td>
 <p>
-(c) SIL International
+(c) SIL Global
 <br/>
 Développé avec l'approbation du comité de langue Tem, CLTem
 <br/>
@@ -91,7 +98,7 @@ Publié sous licence MIT
 </td>
 <td>
 <p>
-(c) SIL International
+(c) SIL Global
 <br/>
 Developed with the approval of the Tem language committee, CLTem
 <br/>
