[bassah_vah] Update keyboard based on feedback

--- a/release/b/bassa_vah/source/readme.htm
+++ b/release/b/bassa_vah/source/readme.htm
@@ -12,13 +12,11 @@
 </head>
 <body>
 
-<h1>Bassa Vah (SIL)</h1>
+<h1>Bassa Vah</h1>
 
 <p>
   This is a keyboard for the Bassa language using the Bassa Vah script. This keyboard is based on the design found in one of the Unicode proposal documents. Feedback is welcomed.
 </p>
-
-<p>Copyright © SIL International</p>
 
 </body>
 </html>
