--- a/release/b/bassa_vah/source/welcome/welcome.htm
+++ b/release/b/bassa_vah/source/welcome/welcome.htm
@@ -20,6 +20,8 @@
   This is a keyboard for the Bassa language using the Bassa Vah script. This keyboard is based on the design found in one of the Unicode proposal documents. Feedback is welcomed.
 </p>
 
+<p>Tone diacritics may only occur on vowels, and two tone diacritics can never co-occur.</p>
+
 <h2>Desktop Keyboard layout</h2>
 <h3>Default (unshifted)</h3>
 <p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
