Korean 9 keys updating
ready for reviewing

--- a/experimental/k/korean_9_keys/source/readme.htm
+++ b/experimental/k/korean_9_keys/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Korean 9 keys</h1>
 
 <p>
-  Korean 9 keys keyboard for old hangul옛한글
+  Korean 9 keys keyboard for hangul한글
 </p>
 <p>e-mail: goetiansoc@proton.me</p>
 <p>telegram: https://t.me/cathaylab</p>
