[horami] Update description

--- a/release/h/horami/source/readme.htm
+++ b/release/h/horami/source/readme.htm
@@ -14,9 +14,6 @@
 
 <h1>Horami Keyboard</h1>
 
-<p> This keyboard is for use by the Horami language
-</p>
-<p>Copyright SIL Global</p>
-<p>MIT License</p>
+<p> This keyboard is for Horami Kurdish which is spoken primarily in Iraq and Iran. It is based on the Sorani Kurdish keyboard and includes several additional letters that are commonly used to write Horami. The orthography used on this keyboard was agreed upon by a committee of Horami authors and scholars.</p>
 </body>
 </html>
