--- a/release/h/horami/source/welcome/welcome.htm
+++ b/release/h/horami/source/welcome/welcome.htm
@@ -11,7 +11,7 @@
 <body>
 <h1>Horami</h1>
 
-<p>This keyboard was developed for keyboarding the Horami.</p>
+<p>This keyboard is for Horami Kurdish which is spoken primarily in Iraq and Iran. It is based on the Sorani Kurdish keyboard and includes several additional letters that are commonly used to write Horami. The orthography used on this keyboard was agreed upon by a committee of Horami authors and scholars.</p>
 
 <p><b>Unshifted</b></p>
 <img src='horamiU_.png' alt='Keyboard Layout'>
