Updated .htm and pak_urdu_phonetic.php

--- a/release/p/pak_urdu_phonetic/source/readme.htm
+++ b/release/p/pak_urdu_phonetic/source/readme.htm
@@ -204,7 +204,7 @@
   <h1>🎉 Welcome to Pak Urdu Phonetic!</h1>
 
   <div class="welcome-message">
-  <p><strong>Pak Urdu Phonetic</strong> is an Urdu keyboard layout inspired by the popular Windows-based <a href="https://mbilalm.com/urdu-installer.php">Pak Urdu Installer</a> by <strong>mBilalm</strong>. It offers a simple, intuitive phonetic typing experience and has become the de facto standard for typing Urdu on Windows.</p>
+  <p><strong>Pak Urdu Phonetic</strong> is an Urdu keyboard layout faithfully ported from the popular Windows-based <a href="https://mbilalm.com/urdu-installer.php">Pak Urdu Installer</a> layout by <strong>mBilalm</strong>. It offers the same simple, intuitive phonetic typing experience and brings this widely adopted standard to the Keyman platform for cross-platform use.</p>
 
   <p>This Keyman-based layout is a modern reimplementation, adapted for cross-platform use (Linux, Windows, macOS) while maintaining compatibility with the original mapping for familiarity and ease of transition.</p>
 
@@ -242,7 +242,7 @@
 
   <h3 style="text-align: center;">Regular Layout
 </h3>
-   <img src="welcome/s1.png" alt="Regular Layout"/>
+   <img src="s1.png" alt="Regular Layout"/>
        <table>
       <thead>
         <tr>
@@ -304,7 +304,7 @@
     </table>
    <h3 style="text-align: center;">Shift Layout
 </h3>
-   <img src="welcome/s2.png" alt="Shift Layout"/>
+   <img src="s2.png" alt="Shift Layout"/>
       <table>
       <thead>
         <tr>
@@ -366,7 +366,7 @@
 
    <h3 style="text-align: center;">AltGr (Right Alt) Layout
 </h3>
-  <img src="welcome/s3.png" alt="AltGr Layout"/>
+  <img src="s3.png" alt="AltGr Layout"/>
       <table>
       <thead>
         <tr>
@@ -427,7 +427,7 @@
     </table>
   <h3 style="text-align: center;">AltGr + Shift Layout
 </h3>
-  <img src="welcome/s4.png" alt="AltGr + Shift Layout"/>
+  <img src="s4.png" alt="AltGr + Shift Layout"/>
    <table>
       <thead>
         <tr>
