--- a/release/p/pak_urdu_phonetic/source/welcome/welcome.htm
+++ b/release/p/pak_urdu_phonetic/source/welcome/welcome.htm
@@ -204,7 +204,7 @@
   <h1>🎉 Welcome to Pak Urdu Phonetic!</h1>
 
   <div class="welcome-message">
-  <p><strong>Pak Urdu Phonetic</strong> is an Urdu keyboard layout inspired by the popular Windows-based <a href="https://mbilalm.com/urdu-installer.php">Pak Urdu Installer</a> by <strong>mBilalm</strong>. It offers a simple, intuitive phonetic typing experience and has become the de facto standard for typing Urdu on Windows.</p>
+  <p><strong>Pak Urdu Phonetic</strong> is an Urdu keyboard layout faithfully ported from the popular Windows-based <a href="https://mbilalm.com/urdu-installer.php">Pak Urdu Installer</a> layout by <strong>mBilalm</strong>. It offers the same simple, intuitive phonetic typing experience and brings this widely adopted standard to the Keyman platform for cross-platform use.</p>
 
   <p>This Keyman-based layout is a modern reimplementation, adapted for cross-platform use (Linux, Windows, macOS) while maintaining compatibility with the original mapping for familiarity and ease of transition.</p>
 
@@ -239,7 +239,7 @@
 
   <div class="keyboard-section">
   <h2>⌨️ Pak Urdu Phonetic - Keyboard Layout Mapping</h2>
-  
+
   <h3 style="text-align: center;">Regular Layout
 </h3>
    <img src="s1.png" alt="Regular Layout"/>
