New: Mapped U+FDFB to AltGr+Shift+X

--- a/release/p/pak_urdu_phonetic/source/welcome/welcome.htm
+++ b/release/p/pak_urdu_phonetic/source/welcome/welcome.htm
@@ -1100,6 +1100,11 @@
                     <td>U+06E5</td>
                 </tr>
                 <tr>
+                    <td>X</td>
+                    <td>ﷻ</td>
+                    <td>U+FDFB</td>
+                </tr>
+                <tr>
                     <td>Y</td>
                     <td>ۦ</td>
                     <td>U+06E6</td>
@@ -1149,7 +1154,7 @@
 
 
     <div class="summary">
-      <p>Total Keys: 47 | Total Mappings: 163</p>
+      <p>Total Keys: 47 | Total Mappings: 164</p>
     </div>
   </div>
 
