--- a/experimental/m/miluk_hanis_siuslaw/source/welcome.htm
+++ b/experimental/m/miluk_hanis_siuslaw/source/welcome.htm
@@ -45,7 +45,7 @@
  
   <p>
 
-  Hold q for: qߴ, qߴw, and qw. 
+  Hold q for: q', q'w, and qw. 
   </p> 
 
   <p>
@@ -54,13 +54,8 @@
   </p> 
 
   <p>
-
-  Hold r for r̊.
-  </p> 
-
-  <p>
   
-  Hold t for: tߴ, ts, tsߴ, tɬ, and tɬߴ.
+  Hold t for: t', ts, ts', tɬ, and tɬ'.
   </p> 
 
   <p>
@@ -80,7 +75,7 @@
 
   <p>
   
-  Hold p for: pߴ. 
+  Hold p for: p'. 
   </p> 
 
   <p>
@@ -110,7 +105,7 @@
 
   <p>
   
-  Hold k for: kߴ, kw, and kߴw.
+  Hold k for: k', kw, and k'w.
   </p> 
 
   <p>
@@ -125,7 +120,7 @@
 
   <p>
   
-  Hold c for: ch and chߴ. 
+  Hold c for: ch and ch'. 
   </p> 
 
   <p>
