[sil_kayah_kali] Update keyboard for better access to quotes

--- a/release/sil/sil_kayah_kali/source/welcome/welcome.htm
+++ b/release/sil/sil_kayah_kali/source/welcome/welcome.htm
@@ -14,6 +14,8 @@
 
   <p>This keyboard supports the Karenni (Kayah) language in the Kayah Li script.</p>
 
+  <p>On the Desktop if two single quotes are typed, a double quote will be output.</p>
+  
   <h2>Default (unshifted)</h2>
   <p><img src="sil_kayah_kaliU_.png" alt="Kayah keyboard layout: default (unshifted) state"></p>
 
@@ -23,7 +25,5 @@
   <h2>AltGR (Right ALT)</h2>
   <p><img src="sil_kayah_kaliU_RA.png" alt="Kayah keyboard layout: AltGr state"></p>
 
-  <h2>Shift + AltGR (Right ALT)</h2>
-  <p><img src="sil_kayah_kaliU_SRA.png" alt="Kayah keyboard layout: Shift + AltGr state"></p>
 </body>
 </html>
