Updating font sample image.

--- a/release/gff/gff_amharic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic/source/welcome/welcome.htm
@@ -451,6 +451,15 @@ hitting the punctuation key two or more times until it appears.</p>
 </dir>
 </div>
 
+<h2><a id="ethiopic-font-samples" name="ethiopic-font-samples"></a>Included Ethiopic Fonts</h2>
+
+<div style="margin-left: 1em;">
+<p>The following fonts have been included with the desktop keyboard.</p>
+<img src="Ethiopic-Font-Samples-920w.png" />
+</dir>
+</div>
+
+
 <hr/>
 </details>
 </div>
