--- a/experimental/n/naijatype/source/naijatype-help.htm
+++ b/experimental/n/naijatype/source/naijatype-help.htm
@@ -31,4 +31,5 @@
     <li>Underdot alternative: type main letter then ALT-FullStop, (Overdot with ALT-SHIFT-FullStop)</li>
     <li>Underline alternative: type letter then ALT-SHIFT-HYPHEN (overline with ALT-Hyphen)</li>
     <li>Vertical line above alternative: type letter then ALT-Backslash.</li>
+    <li>Special underdot short-cut: type a vowel, then before or after adding tone marks above, ctrl-alt-semi-colon adds an underdot.</li>
 </ul>
