--- a/release/sil/sil_mon/source/welcome/welcome.htm
+++ b/release/sil/sil_mon/source/welcome/welcome.htm
@@ -16,23 +16,23 @@
 
 <p>
   Mon (SIL) Keyboard based on the <a href="https://commons.wikimedia.org/wiki/File:Mon-Keyboard-layout-for-Windows.jpg">
-  Mon Keyboard Layout for Windows</a>
+  Mon Keyboard Layout for Windows</a>. A few modifications have been made for ease of use.
 </p>
 
 <h1>Keyboard Layout</h1>
 
 <h2>Desktop Keyboard Layout</h2>
 <h3>Unshifted [Same as 'Default']</h3>
-<p><a href="desktop_layout_default.png">
-  <img class="keyboard" src="desktop_layout_default.png" alt="Default (unshifted) state"  width='720px'/></a></p>
+<p><a href="LayoutU_.png">
+  <img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state"  width='720px'/></a></p>
 
 <h3>Shifted</h3>
-<p><a href="desktop_layout_shift.png">
-  <img class="keyboard" src="desktop_layout_shift.png" alt="Shift state" width='720px' /></a></p>
+<p><a href="LayoutU_S.png">
+  <img class="keyboard" src="LayoutU_S.png" alt="Shift state" width='720px' /></a></p>
 
 <h3>Right Alt</h3>
-<p><a href="desktop_layout_rightalt.png">
-  <img class="keyboard" src="desktop_layout_rightalt.png" alt="Right Alt state" width='720px' /></a></p>
+<p><a href="LayoutU_RA.png">
+  <img class="keyboard" src="LayoutU_RA.png" alt="Right Alt state" width='720px' /></a></p>
 
 </body>
 </html>
