--- a/release/basic/basic_kbdtifi/source/readme.htm
+++ b/release/basic/basic_kbdtifi/source/readme.htm
@@ -14,11 +14,8 @@
 <h1>Tifinagh (Basic) Basic</h1>
 
 <p>
-    Tifinagh (Basic) Basic 1.0 generated from template.
+    This keyboard is designed for the Central Atlas Tamazight language of Morocco (Tifinagh script). 
 </p>
-<p>A font must be installed to support this keyboard. Windows includes the <b>Ebrima</b> font which supports the <b>Tifinagh</b> script.</p>
-
-<p>(c) 2018 SIL International</p>
 
 </body>
 </html>
