[tai_lanna_thai] Update keyboard and remove 2 other keyboards

--- a/experimental/t/tai_lanna_thai/source/readme.htm
+++ b/experimental/t/tai_lanna_thai/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Tai Lanna (Thai Layout)</h1>
 
 <p>
-  
+  The Tai Lanna (Thai Layout) keyboard enables input of the Tai Tham Unicode script using a Thai-based layout.
 </p>
 
 <p>Copyright ©  Jayasiri Jayasāro Bhikkhu, ven.chaisiri@gmail.com</p>
