--- a/experimental/t/tai_lanna_thai/source/welcome/welcome.htm
+++ b/experimental/t/tai_lanna_thai/source/welcome/welcome.htm
@@ -15,12 +15,14 @@
 <h1>Start Using Tai Lanna (Thai Layout)</h1>
 
 <p>
-  
+  The Tai Lanna (Thai Layout) keyboard enables input of the Tai Tham Unicode script using a Thai-based layout.
 </p>
+  <h2>Desktop Keyboard layout</h2>
+	<h3>Default (unshifted)</h3>
+	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+	<h3>Shift</h3>
+	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 
-<h1>Keyboard Layout</h1>
-
-<!-- Insert Keyboard Layout Images or HTML here -->
 
 </body>
 </html>
