--- a/release/w/wali/source/welcome/welcome.htm
+++ b/release/w/wali/source/welcome/welcome.htm
@@ -46,36 +46,58 @@
       These layouts follows the official Wali orthography as proposed by Abdul Moomin, Abdul-Aziz in his 2015 Master's Thesis, "Aspects of Waali phonology," from the University of Ghana.
   </p>   
 
-</div>
+  <h1>Keyboard Layout</h1>
 
-<h1>Keyboard Layout</h1>
-
-<h2>Desktop Keyboard layouts</h2>
-<ul>To get the following vowels (a,e,i,o,u) with the acute, grave or tilde accent, type:
+  <h2>Desktop Keyboard layouts</h2>
+  <ul>To get the following vowels (a,e,i,o,u) with the acute, grave or tilde accent, type:
     <li><kbd>'</kbd> + <kbd>[vowel]</kbd> = <kbd>Vowel with Accute</kbd></li>
     <li><kbd>`</kbd> + <kbd>[vowel]</kbd> = <kbd>Vowel with Grave</kbd></li>
     <li><kbd>~</kbd> + <kbd>[vowel]</kbd> = <kbd>Vowel with Tilde</kbd></li>
-</ul>
+  </ul>
+  <h3>Default (unshifted)</h3>
+    <p>
+      <a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a>
+    </p>
+  <h3>Shift</h3>
+    <p>
+      <a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a>
+    </p>
+  <h3>Right ALT (unshifted)</h3>
+    <p>
+      <a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a>
+    </p>
+  <h3>Shift Right ALT</h3>
+    <p>
+      <a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Shift Right ALT state" /></a>
+    </p>
 
-<div id='osk' data-states='default shift rightalt rightalt-shift'>
+  <h2>Touch Keyboard layouts</h2>
+  <ul>To get the following vowels (a,e,i,o,u,ɩ,ʋ,ɛ,ɔ) with the acute, grave or tilde accent, use longpress gesture:
+      <li>Longpress <kbd>a</kbd> = <kbd>ã</kbd></li>
+      <li>Longpress <kbd>a</kbd> = <kbd>á</kbd></li>
+      <li>Longpress <kbd>a</kbd> = <kbd>à</kbd></li>
+      <li>Longpress <kbd>[vowel]</kbd> = <kbd>[vowel with an accent]</kbd></li>
+  </ul>
+  <ul>To get q, z, x, and c, use longpress gesture:
+      <li>Longpress <kbd>ŋ</kbd> = <kbd>q</kbd></li>
+      <li>Longpress <kbd>ʋ</kbd> = <kbd>z</kbd></li>
+      <li>Longpress <kbd>ɛ</kbd> = <kbd>x</kbd></li>
+      <li>Longpress <kbd>ɔ</kbd> = <kbd>c</kbd></li>
+  </ul>
+  <h3>Default (unshifted)</h3>
+    <p>
+      <a href="TouchLayoutU_.png"><img class="keyboard" src="TouchLayoutU_.png" alt="Default (unshifted) state" style="width:720px"/></a>
+    </p>
+  <h3>Shift</h3>
+    <p>
+      <a href="TouchLayoutU_S.png"><img class="keyboard" src="TouchLayoutU_S.png" alt="Shift state" style="width:720px"/></a>
+    </p>
+  <h3>Numeric</h3>
+    <p>
+      <a href="TouchLayoutU_N.png"><img class="keyboard" src="TouchLayoutU_N.png" alt="Numeric state" style="width:720px"/></a>
+    </p>
+
 </div>
-
-<h2>Touch Keyboard layouts</h2>
-<ul>To get the following vowels (a,e,i,o,u) with the acute, grave or tilde accent, use flick gesture:
-    <li>Flick up on key <kbd>a</kbd> = <kbd>ã</kbd></li>
-    <li>Flick right on key <kbd>a</kbd> = <kbd>á</kbd></li>
-    <li>Flick down on key <kbd>a</kbd> = <kbd>à</kbd></li>
-</ul>
-<ul>To get q, z, x, and c, use longpress gesture:
-    <li>Longpress <kbd>ŋ</kbd> = <kbd>q</kbd></li>
-    <li>Longpress <kbd>ʋ</kbd> = <kbd>z</kbd></li>
-    <li>Longpress <kbd>ɛ</kbd> = <kbd>x</kbd></li>
-    <li>Longpress <kbd>ɔ</kbd> = <kbd>c</kbd></li>
-</ul>
-
-<div id='osk-phone' data-states='default shift numeric symbol'>
-</div>
-<!-- Insert Keyboard Layout Images or HTML here -->
 
 </body>
 </html>
