--- a/release/t/thamizha_bamini/source/welcome/welcome.htm
+++ b/release/t/thamizha_bamini/source/welcome/welcome.htm
@@ -635,7 +635,7 @@ This keyboard was created by Mugunth (mugunth@gmail.com), Umar (csd_one@yahoo.co
 		<td><span class='lang2' >+</span><br/ ><span class='keys'>[S+]</span></td></td>
 		<td><span class='lang2' >{</span><br/ ><span class='keys'>[S{}]</span></td></td>
 		<td><span class='lang2' >}</span><br/ ><span class='keys'>[S}]</span></td></td>
-		<td><span class='lang2' ></span><br/ ><span class='keys'></span></td></td>
+		<td><span class='lang2' >₹</span><br/ ><span class='keys'>[Ctrl+Alt+4]</span></td></td>
 		<td><span class='lang2' ></span><br/ ><span class='keys'></span></td></td>
 		<td><span class='lang2' ></span><br/ ><span class='keys'></span></td></td>
 		<td><span class='lang2' ></span><br/ ><span class='keys'></span></td></td>
