--- a/release/o/orma/source/welcome.htm
+++ b/release/o/orma/source/welcome.htm
@@ -38,14 +38,14 @@
 <p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">type
 <b>;p</b> to get <b>&#421;</b></font></p>
 <p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">type
-<b>;t</b> to get <b>&#427;</b></font></p>
-<p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">
-
+<b>;t</b> to get <b>&#355;</b></font></p>
+<p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">type
+<b>;'</b> to get <b>&#xA78C;</b></font></p>
 
 </p>
 <p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">type
 <b>;</b> then the upper case letter to get</font></p>
-<p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">&Ntilde;&Ccedil;&#256;&#274;&#298;&#332;&#362;&#394;&#408;&#420;&#428;</b></font></p>
+<p style="margin-bottom: 0in; line-height: 100%"><font face="Charis SIL">&Ntilde;&Ccedil;&#256;&#274;&#298;&#332;&#362;&#394;&#408;&#420;&#354;</b></font></p>
 <p style="margin-bottom: 0in; line-height: 100%"><br/>
 
 For the hook c with cedilla
