--- a/release/sil/sil_tchad_faux_azerty/source/readme.htm
+++ b/release/sil/sil_tchad_faux_azerty/source/readme.htm
@@ -38,7 +38,8 @@
     dans cet
     alphabet standard, ainsi que d’autres caractères utiles comme les
     symboles phonétiques et les caractères français.</p>
-    <p>©&nbsp;2017-2025 SIL Global</p>
+    <p>©&nbsp; SIL Global</p>
   </div>
 </body>
 </html>
+
