--- a/release/sil/sil_tchad_faux_azerty/source/welcome/welcome.htm
+++ b/release/sil/sil_tchad_faux_azerty/source/welcome/welcome.htm
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
-<title>Chad FALSE AZERTY Keyboard Help</title>
+<title>Tchad FAUX AZERTY Keyboard Help</title>
 <link rel="stylesheet" href="Td.css">
 
 </head>
@@ -564,5 +564,6 @@ pour taper des caractères spéciaux.</p>
 <!--Ending French-->
 </div>
 </body>
+
 
 </html>
