[sil_hupdah] apply @darcywong00 suggestions for keyboard description

--- a/release/sil/sil_hupdah/source/welcome.htm
+++ b/release/sil/sil_hupdah/source/welcome.htm
@@ -39,7 +39,10 @@
 <h1>Start Using sil_hupdah</h1>
 
 <p>
-  The Hupdah keyboard is for the language and people of Hupa.
+  The Hupdah (SIL) keyboard is for the <a href="https://en.wikipedia.org/wiki/Hup_language" alt="Hup language - Wikipedia">Hup language</a> (also called Hupda, Hupdah, Hupdé", "Húpd’äh, Jupde, and more). Hup language is one of the four Naduhup languages. 
+</p>
+<p>
+  It is spoken by the Hupda indigenous Amazonian peoples who live on the border between Colombia and the Brazilian state of Amazonas.
 </p>
 
 <h1>Keyboard rules</h1>
