--- a/release/sil/sil_hupdah/source/readme.htm
+++ b/release/sil/sil_hupdah/source/readme.htm
@@ -15,7 +15,10 @@
 <h1>sil_hupdah</h1>
 
 <p>
-  The Hupdah keyboard is for the language and people of Hupa.
+  The Hupdah (SIL) keyboard is for the <a href="https://en.wikipedia.org/wiki/Hup_language" alt="Hup language - Wikipedia">Hup language</a> (also called Hupda, Hupdah, Hupdé", "Húpd’äh, Jupde, and more). Hup language is one of the four Naduhup languages. 
+</p>
+<p>
+  It is spoken by the Hupda indigenous Amazonian peoples who live on the border between Colombia and the Brazilian state of Amazonas.
 </p>
 
 <p>Access the keyboard help documentation to find the key combination rules and keyboard layouts.</p>
