--- a/experimental/l/lac_viet/source/welcome.htm
+++ b/experimental/l/lac_viet/source/welcome.htm
@@ -88,7 +88,7 @@
   </tr>
   <tr>
     <td>qu</td>
-    <td>gư</td>
+    <td>gw</td>
   </tr>
   <tr>
     <td>ng</td>
@@ -193,7 +193,7 @@
 </table>
 
 <h1>samples</h1>
-<p>Pỗ-Pỗ ma tầng lả-pưn xộ mì xư-dồ, xun-hiền xấu kền-li pỗ-pỗ pình-tẩng. Gióng vùn mì lỉ-sinh xấu liềng-sim, ưng-tang tại gióng de lủm pỹ-noãng ít-dệng.</p>
+<p>Pỗ-Pỗ ma tầng lả-pưn xộ mì xư-dồ, xun-hiền xấu kền-li pỗ-pỗ pình-tẩng. Gióng vùn mì lỉ-sinh xấu liềng-sim, ưng-tang tại gióng de lủm pỹ-noãng ít-đệng.</p>
 <!-- Insert Keyboard Layout Images or HTML here -->
 
 </body>
