--- a/release/t/thamizha_bamini/source/welcome/welcome.htm
+++ b/release/t/thamizha_bamini/source/welcome/welcome.htm
@@ -52,6 +52,8 @@ intended for use with a normal QWERTY (English) keyboard. </p>
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h4>Shift</h4>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h4>RightAlt</h4>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="RightAlt state" /></a></p>
 </div>
 		
 
