[easy_chakma] Update keyboard to use new font

--- a/release/e/easy_chakma/source/welcome/welcome.htm
+++ b/release/e/easy_chakma/source/welcome/welcome.htm
@@ -13,6 +13,13 @@
 This is the natural and the most powerful Keyboard of the Chakma Community and others people who are interested and love the Chakma language.
 </p>
 
+  <h2>Desktop Keyboard layout</h2>
+	<h3>Default (unshifted)</h3>
+	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+	<h3>Shift</h3>
+	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+
+    
 <p style="text-align: justify">ENJOY CHAKMA LANGUAGE OFFLINE AND ONLINE!</p>
 
 </body>
