Progress on welcome contents.

--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -304,7 +304,9 @@ Another way to type a letter, that does not change the vowel keys, is to hold a 
 The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have popups help type more punctuation easily.  
 </p>
 
-<img src="gff_amharic-phone-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
+<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>⇧</kbd> key to shift to the next layer:</p>
+
+<img src="gff_amharic-phone-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <h3>Tapping</h3>
 <p>
@@ -439,6 +441,10 @@ Observe that some keys have a small “hint” letter in the upper right corner.
 
 <img src="gff_amharic-tablet-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
+<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>⇧</kbd> key to shift to the next layer:</p>
+
+<img src="gff_amharic-tablet-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
 <h3>Long Presses</h3>
 <p>
 As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <kbd>ግ</kbd> is shown below:
@@ -446,12 +452,6 @@ As an alternative, if preferred, holding a key down for a few moments (called a 
 
 <img src="gff_amharic-tablet-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>
-The modifier keys will also have popups as applicable.  To enter the extended syllables for <kbd class='zemede-geez'>ጐ</kbd>, 
-<kbd class='zemede-kaib'>ጕ</kbd>, <kbd class='zemede-salis'>ጒ</kbd>, <kbd class='zemede-rabi'>ጓ</kbd>, and <kbd class='zemede-hamis'>ጔ</kbd>
-type the related key. For example, the <kbd class='rabi'>ጋ<sup style="color: #777">ጓ</sup></kbd> key has the popup key <kbd class='zemede-rabi'>ጓ</kbd>
-as shown:
-</p>
 
 <img src="gff_amharic-tablet-default-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
@@ -505,25 +505,26 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing 
 
 <h2>Punctuation</h2>
 
-<p>When typing letters, the <kbd>!</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd>!</kbd>:</p>
+<p>When typing letters, the <kbd>?</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd>?</kbd>:</p>
 
-<img src="gff_amharic-tablet-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="gff_amharic-tablet-default-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>The punctuation for a longpress of <kbd class='epunct'>።</kbd>:</p>
 
+<img src="gff_amharic-tablet-default-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>.?123</kbd> key to shift to the next layer:</p>
+
+<img src="gff_amharic-tablet-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 <img src="gff_amharic-tablet-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>For additional punctuation and numerals, tap the <kbd class='epunct'>@</kbd> key to shift to the next layer:</p>
-
-<img src="gff_amharic-tablet-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
-
-<p>A tap of the <kbd class='epunct'>፩፪፫</kbd> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
+<p>A tap of the <kbd class='epunct'>፩፪፫</kbd> key will go to the final layer where Geʾez numbers and some less used symbols can be accessed.</p>
 
 <h2>Numerals</h2>
 
 <p>The last layer to shift to presents the Geʾez numbers, all Geʾez punctuation, letters of related languages, and a few lesser used letters that did not fit conveniently on the initial letters layer.</p>
 
-<img src="gff_amharic-tablet-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="gff_amharic-tablet-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>Simply tap the <kbd class='epunct'>ሀለሐ</kbd> key to return to the starting letters layers.</p>
 
