Adding art file for multitaps and flicks.

--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -304,9 +304,16 @@ Another way to type a letter, that does not change the vowel keys, is to hold a 
 The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have popups help type more punctuation easily.  
 </p>
 
-<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>⇧</kbd> key to shift to the next layer:</p>
+<p>The punctuation for a longpress of <kbd>።</kbd>:</p>
 
-<img src="gff_amharic_classic-phone-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="gff_amharic_classic-phone-default-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>The punctuation for a longpress of <kbd>?</kbd>:</p>
+
+<img src="gff_amharic_classic-phone-default-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
+
 
 <h3>Tapping</h3>
 <p>
@@ -375,43 +382,26 @@ letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd>
 
 <h2>Punctuation</h2>
 
-<p>When typing letters, the <kbd class='epunct'>!</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd class='epunct'>!</kbd>:</p>
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
 
 <img src="gff_amharic_classic-phone-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>The punctuation for a longpress of <kbd class='epunct'>።</kbd>:</p>
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>#+=</kbd> key to shift to the next layer:</p>
 
 <img src="gff_amharic_classic-phone-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>For additional punctuation and numerals, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
-
-<img src="gff_amharic_classic-phone-punctuation-3.jpeg" style="border: 1px solid black;" width="100%"/>
-
 <p>Note that numerals on the punctuation layer use the long press feature to make Geʾez numerals available:</p>
 
-<img src="gff_amharic_classic-phone-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="gff_amharic_classic-phone-punctuation-1-numbers.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Tapping the <kbd class='epunct'>@</kbd> shifts to a 2nd layer to access all remaining punctuation:</p>
-
-<img src="gff_amharic_classic-phone-punctuation-4.jpeg" style="border: 1px solid black;" width="100%"/>
-
-<p>A tap of the <kbd class='epunct'>፩</kbd> key will go to the final layer where Geʾez numbers and some less used, and non-Amharic letters, can be accessed.</p>
+<p>A tap of the <kbd class='epunct'>፩፪፫</kbd> key will go to the final layer where Geʾez numbers and some less used symbols can be accessed.</p>
 
 <h2>Numerals</h2>
 
 <p>The last layer to shift to presents the Geʾez numbers, all Geʾez punctuation, letters of related languages, and a few lesser used letters that did not fit conveniently on the initial letters layer.</p>
 
-<p>Note the arrow button, <kbd class='etens'>▶</kbd>, at the end of the row of Geʾez numerals, tapping it will slide the numerals to the remaining numbers that are orders of ten (e.g. ፳, ፴, ፵, etc.):</p>
+<img src="gff_amharic_classic-phone-numerals-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<img src="gff_amharic_classic-phone-numerals-2.jpeg" style="border: 1px solid black;" width="100%"/>
-
-<p>After tapping the <kbd class='etens'>▶</kbd> button, the Geʾez orders of ten appear as shown:</p>
-
-<img src="gff_amharic_classic-phone-numerals-3.jpeg" style="border: 1px solid black;" width="100%"/>
-
-<p>Tapping the <kbd class="key_example">▶</kbd> button again slides to the western digits, a final tap will return to the initial Geʾez numerals.</p>
-
-<img src="gff_amharic_classic-phone-numerals-4.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>Simply tap the <kbd class='epunct'>ሀለሐ</kbd> key to return to the starting letters layers.</p>
 
@@ -458,26 +448,8 @@ As an alternative, if preferred, holding a key down for a few moments (called a 
 
 <img src="gff_amharic_classic-tablet-punctuation-1-numbers.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<h3>Flicks</h3>
-<p>
-Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
-Flicks are very convenient since they can save you from having to shift to the next keyboard view to access a letter, or avoid the need of
-making additional finger motions to type a letter. Some examples:
-</p>
 
-<dl style="text-indent: 20px">
-  <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
-  <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
-  <dd>• Flicking the <kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;፪&rsquo; instead of &lsquo;2&rsquo;.</dd>
-</dl>
-
-<p>
-Note that two flicks are possible on the numeral keys. An <em>upward</em> flick is also available, for example an upward flick on the
-<kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;@&rsquo; instead of &lsquo;2&rsquo;.</dd>
-</p>
-
-
-<h3>Taps</h3>
+<h3>Tapping</h3>
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
 Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
@@ -501,6 +473,30 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing 
   <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 2 taps: @</dd>
 </dl>
 
+<img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/>
+
+<h3>Flicking</h3>
+<p>
+Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
+Flicks are very convenient since they can save you from having to shift to the next keyboard view to access a letter, or avoid the need of
+making additional finger motions to type a letter. Some examples:
+</p>
+
+<dl style="text-indent: 20px">
+  <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
+  <dd>• Flicking the <kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;፪&rsquo; instead of &lsquo;2&rsquo;.</dd>
+</dl>
+
+<p>
+Note that two flicks are possible on the numeral keys. An <em>upward</em> flick is also available, for example an upward flick on the
+<kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;@&rsquo; instead of &lsquo;2&rsquo;.</dd>
+</p>
+
+<img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="25%"/>
+
+
+
 
 <h2>Punctuation</h2>
 
@@ -515,6 +511,9 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing 
 <p>For additional punctuation and numerals, tap the <kbd class='epunct'>.?123</kbd> key to shift to the next layer:</p>
 
 <img src="gff_amharic_classic-tablet-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional punctuation and numerals, tap the <kbd class='epunct'>#+=</kbd> key to shift to the next layer:</p>
+
 <img src="gff_amharic_classic-tablet-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>A tap of the <kbd class='epunct'>፩፪፫</kbd> key will go to the final layer where Geʾez numbers and some less used symbols can be accessed.</p>
